--- a/pom.xml
+++ b/pom.xml
@@ -36,15 +36,25 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
+        <start-class>com.proyectociscu.tappa_restful.AppMain</start-class>
     </properties>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <fork>true</fork>
-                    <mainClass>com.proyectociscu.tappa_restful.AppMain</mainClass>
+                    <mainClass>${start-class}</mainClass>
                 </configuration>
                 <executions>
                     <execution>
@@ -68,7 +78,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.proyectociscu.tappa_restful.AppMain</mainClass>
+                            <mainClass>com.ralba.townrestful.AppMain</mainClass>
                         </manifest>                      
                     </archive>
                 </configuration>
